*changed package.json app name *changed location of jquery pull *changed app name *style changes

--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,10 @@
     
     <!-- Extra Libraries -->
     <script src="https://use.fontawesome.com/d549ebd6b8.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </head>
 
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <nasa-app>Loading AppComponent content here ...</nasa-app>
   </body>
 </html>
